Add css_basic folder with base.css, styles.css, and copied HTML files

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Cool Webpage</title>
+  <title>Your Title</title>
   <link href="base.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 </head>
