--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -9,11 +9,12 @@
 </head>
 <body class="works_on_smartphone">
   <header>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="tweets.html">Tweets</a></li>
-    </ul>
-  </header>
+  <ul>
+    <li class="logo">&#9733;</li> <!-- This is a star icon, you can choose any from Unicode -->
+    <li><a href="index.html">Home</a></li>
+    <li><a href="tweets.html">Tweets</a></li>
+  </ul>
+</header>
 
   <main>
     <article>
